@@ -5,6 +5,7 @@ if(MINIMAL_BUILD)
 else(MINIMAL_BUILD)
   set(tools
         babel
+        obabel
         obchiral
         obconformer
         obenergy
